Search engine design : second working day

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         </ul>
       </nav>
       <section id="logo"> </section>
+      <section id="form">
+      	<form method="post" action="traitemnt.php">
+      		<input type="search" name="google_search" id="search" size=70px/>
+            
+      		<div id="buttons">
+      			<br/>
+      			<input type="submit" value="Recherche Google"/>
+      			<input type="submit" value="J'ai de la chance">
+      		</div>
+      		<div id="text">
+      			<br>
+      			<p> Google disponible en : <em> العربية </em> </p>
+      		</div>
+      	</form>
 
 
     </body>
