performed the footer : 3 day of work

--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
       			<p> Google disponible en : <em> العربية </em> </p>
       		</div>
       	</form>
+      </section>
+      <footer>
+      	<div id="loc">
+      		<p> Tunisie </p>
+      	</div>
+      	<div id ="bottom_links">
+      		<ul>
+      			<li> <a href="https://about.google/?utm_source=google-TN&utm_medium=referral&utm_campaign=hp-footer&fg=1"> À propos </a></li>
+      			<li><a href="https://www.google.tn/intl/fr_tn/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"> Publicité </a></li>
+      			<li> <a href="https://www.google.tn/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"> Entreprise </a></li>
+      			<li> <a href="https://google.com/search/howsearchworks/?fg=1"> Comment fonctionne la recherche Google ? </a> </li>
+      		</ul>
+      		<ul>
+      			<li> <a href="https://policies.google.com/privacy?hl=fr-TN&fg=1">Confidentialité </a></li>
+      			<li> <a href="https://policies.google.com/terms?hl=fr-TN&fg=1">Conditions </a></li>
+      			<li> <a href="#">Paramètres</a> </li>
+      		</ul>
+      	</div>
+
+
+
+      </footer>
 
 
     </body>
