final version + README page description.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             
       		<div id="buttons">
       			<br/>
-      			<input type="submit" value="Recherche Google"/>
-      			<input type="submit" value="J'ai de la chance">
+      			<input type="submit" id ="bt1" value="Recherche Google"/>
+      			<input type="submit" id="bt2" value="J'ai de la chance">
       		</div>
       		<div id="text">
       			<br>
